--- a/pokemons/css/_vars.scss
+++ b/pokemons/css/_vars.scss
@@ -9,3 +9,8 @@ $white: white;
 $red: #FF0211;
 
 $black: #020202;
+
+@keyframes spin {
+  from {transform:rotate(0deg);}
+  to {transform:rotate(90deg);}
+}
