--- a/pokemons/css/style.scss
+++ b/pokemons/css/style.scss
@@ -2,8 +2,9 @@
 
 body, html {
   font-size: 14px;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
+
 
 .container {
   width: 60%;
@@ -29,14 +30,37 @@ body, html {
   border-right: 1px solid white;
   margin-right: 10px;
   padding-right: 10px;
+  &:hover .pokeballs {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+  }
 }
 
 .pokeballs {
   margin-right: 5px;
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  -webkit-transition-property: -webkit-transform;
+  -moz-transition-property: -moz-transform;
+  -o-transition-property: -o-transform;
+  transition-property: transform;
+  overflow: hidden;
+
+  &:hover {
+
+  }
 }
 
 .register {
   color: $yellow;
+  &:hover .pokeballs {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+  }
 }
 
 .topmenu {
@@ -101,7 +125,7 @@ body, html {
 }
 
 .feature {
-  height: 470px;
+  height: 570px;
 }
 
 .feathead {
@@ -111,17 +135,71 @@ body, html {
 }
 
 .pokecard {
-  height: 320px;
-  width: 250px;
-  border: 2px solid $red;
-  border-radius: 8px;
+  height: 447px;
+  width: 293px;
+  border: 2px solid #F8E0C3;
+  border-radius: 1px;
+  text-align: center;
+}
+
+.cardimg {
+  width: 288px;
+  background-image: url(../images/cardbg.png);
+  height: 268px;
+  position: relative;
 }
 
 
 .circlecard {
-  width: 230px;
-  margin: auto;
+  display: inline-block;
+  width: 210px;
+  border-radius: 70px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+
+.carddesc {
+  h4 {
+    color: $red;
+  }
+  p {
+    color: #B9B7A7;
+  }
+}
+
+.leftgr, .rightgr {
+  float: left;
+  width: 50%;
+}
+
+.leftgr {
+  text-align: left;
+  margin-left: 20px;
+}
+
+.rightgr {
+  text-align: right;
+  margin-right: 0px;
+  width: 100px;
+}
+
+.cardbtn {
+  width: 250px;
+  margin-top: 20px;
+  height: 42px;
+  background: linear-gradient(-45deg, #FF0211, #000000);
+  color: white;
+  border: none;
+  p {
+    font-weight: 500;
+    color: white;
+    margin-top: 7px;
+  }
+}
+
+
 
 .smartcontract {
   height: 300px;
@@ -131,8 +209,8 @@ body, html {
   }
 }
 
-.how {
-  height: 300px;
+.all {
+  height: 900px;
   background-color: $white;
   h3 {
     text-align: center;
@@ -147,6 +225,31 @@ body, html {
   }
 }
 
+.blackmenu {
+  height: 300px;
+  background-color: $black;
+  color: $white;
+}
+
+.lastline {
+  height: 70px;
+  background-color: $red;
+  p {
+    line-height: 70px;
+    margin-left: 40px;
+  }
+}
+
+
+.value {
+
+}
+
+.blacklogo {
+  float: right;
+  margin-top: 100px;
+  margin-right: 40px;
+}
 
 
 
